- Data Structure and Tensorboard is updated

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -53,19 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_10_mar_0.6_sf_0.9_0.9_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
-       " '4 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_5_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
+       " '4 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
        " '5 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_10_mar_0.6_sf_0.9_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
        " '6 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_15_mar_0.6_sf_0.9_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_5_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl'"
+       "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -124,18 +124,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.447594278283485,
-          0.44187256176853057,
-          0.45201560468140445,
-          0.45955786736020804,
-          0.4616384915474642,
-          0.4626788036410923
+          0.411703511053316,
+          0.41794538361508454,
+          0.42600780234070224
          ]
         },
         {
@@ -145,18 +139,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.5622886866059817,
-          0.5563068920676203,
-          0.5622886866059817,
-          0.5693107932379714,
-          0.5724317295188557,
-          0.5729518855656697
+          0.5235370611183355,
+          0.5250975292587776,
+          0.5355006501950585
          ]
         },
         {
@@ -166,18 +154,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.6829648894668401,
-          0.6842652795838752,
-          0.6897269180754226,
-          0.6928478543563069,
-          0.694668400520156,
-          0.6949284785435631
+          0.6429128738621587,
+          0.6543563068920676,
+          0.6605981794538361
          ]
         },
         {
@@ -187,18 +169,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.765149544863459,
-          0.7596879063719115,
-          0.7690507152145644,
-          0.7755526657997399,
-          0.776332899869961,
-          0.7758127438231469
+          0.7323797139141742,
+          0.7420026007802341,
+          0.7485045513654096
          ]
         },
         {
@@ -208,18 +184,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.8319895968790637,
-          0.8306892067620286,
-          0.8400520156046815,
-          0.8423927178153446,
-          0.8431729518855656,
-          0.8423927178153446
+          0.8046814044213264,
+          0.811443433029909,
+          0.8174252275682705
          ]
         },
         {
@@ -229,18 +199,12 @@
          "x": [
           0,
           1,
-          2,
-          3,
-          4,
-          5
+          2
          ],
          "y": [
-          0.8925877763328999,
-          0.8928478543563069,
-          0.8964889466840053,
-          0.8996098829648894,
-          0.9006501950585175,
-          0.9016905071521456
+          0.8769830949284786,
+          0.8803641092327699,
+          0.8842652795838751
          ]
         }
        ],
@@ -255,10 +219,10 @@
        }
       },
       "text/html": [
-       "<div id=\"ff5d9d9f-f1af-44ff-a708-fd89a0a9e399\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff5d9d9f-f1af-44ff-a708-fd89a0a9e399\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.447594278283485, 0.44187256176853057, 0.45201560468140445, 0.45955786736020804, 0.4616384915474642, 0.4626788036410923], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.5622886866059817, 0.5563068920676203, 0.5622886866059817, 0.5693107932379714, 0.5724317295188557, 0.5729518855656697], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.6829648894668401, 0.6842652795838752, 0.6897269180754226, 0.6928478543563069, 0.694668400520156, 0.6949284785435631], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.765149544863459, 0.7596879063719115, 0.7690507152145644, 0.7755526657997399, 0.776332899869961, 0.7758127438231469], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.8319895968790637, 0.8306892067620286, 0.8400520156046815, 0.8423927178153446, 0.8431729518855656, 0.8423927178153446], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.8925877763328999, 0.8928478543563069, 0.8964889466840053, 0.8996098829648894, 0.9006501950585175, 0.9016905071521456], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"14e3c623-5595-430f-b963-eb559d3bce76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14e3c623-5595-430f-b963-eb559d3bce76\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2], \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2], \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2], \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2], \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2], \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2], \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"ff5d9d9f-f1af-44ff-a708-fd89a0a9e399\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff5d9d9f-f1af-44ff-a708-fd89a0a9e399\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.447594278283485, 0.44187256176853057, 0.45201560468140445, 0.45955786736020804, 0.4616384915474642, 0.4626788036410923], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.5622886866059817, 0.5563068920676203, 0.5622886866059817, 0.5693107932379714, 0.5724317295188557, 0.5729518855656697], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.6829648894668401, 0.6842652795838752, 0.6897269180754226, 0.6928478543563069, 0.694668400520156, 0.6949284785435631], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.765149544863459, 0.7596879063719115, 0.7690507152145644, 0.7755526657997399, 0.776332899869961, 0.7758127438231469], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.8319895968790637, 0.8306892067620286, 0.8400520156046815, 0.8423927178153446, 0.8431729518855656, 0.8423927178153446], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2, 3, 4, 5], \"y\": [0.8925877763328999, 0.8928478543563069, 0.8964889466840053, 0.8996098829648894, 0.9006501950585175, 0.9016905071521456], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"14e3c623-5595-430f-b963-eb559d3bce76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14e3c623-5595-430f-b963-eb559d3bce76\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2], \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2], \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2], \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2], \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2], \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2], \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
       ]
      },
      "metadata": {},
@@ -337,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -372,64 +336,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.462679</td>\n",
-       "      <td>0.572952</td>\n",
-       "      <td>0.694928</td>\n",
-       "      <td>0.775813</td>\n",
-       "      <td>0.842393</td>\n",
-       "      <td>0.901691</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.461638</td>\n",
-       "      <td>0.572432</td>\n",
-       "      <td>0.694668</td>\n",
-       "      <td>0.776333</td>\n",
-       "      <td>0.843173</td>\n",
-       "      <td>0.900650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.459558</td>\n",
-       "      <td>0.569311</td>\n",
-       "      <td>0.692848</td>\n",
-       "      <td>0.775553</td>\n",
-       "      <td>0.842393</td>\n",
-       "      <td>0.899610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.452016</td>\n",
-       "      <td>0.562289</td>\n",
-       "      <td>0.689727</td>\n",
-       "      <td>0.769051</td>\n",
-       "      <td>0.840052</td>\n",
-       "      <td>0.896489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.447594</td>\n",
-       "      <td>0.562289</td>\n",
-       "      <td>0.682965</td>\n",
-       "      <td>0.765150</td>\n",
-       "      <td>0.831990</td>\n",
-       "      <td>0.892588</td>\n",
+       "      <td>0.426008</td>\n",
+       "      <td>0.535501</td>\n",
+       "      <td>0.660598</td>\n",
+       "      <td>0.748505</td>\n",
+       "      <td>0.817425</td>\n",
+       "      <td>0.884265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.441873</td>\n",
-       "      <td>0.556307</td>\n",
-       "      <td>0.684265</td>\n",
-       "      <td>0.759688</td>\n",
-       "      <td>0.830689</td>\n",
-       "      <td>0.892848</td>\n",
+       "      <td>0.417945</td>\n",
+       "      <td>0.525098</td>\n",
+       "      <td>0.654356</td>\n",
+       "      <td>0.742003</td>\n",
+       "      <td>0.811443</td>\n",
+       "      <td>0.880364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.411704</td>\n",
+       "      <td>0.523537</td>\n",
+       "      <td>0.642913</td>\n",
+       "      <td>0.732380</td>\n",
+       "      <td>0.804681</td>\n",
+       "      <td>0.876983</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -437,15 +371,12 @@
       ],
       "text/plain": [
        "   epoch     top_1     top_2     top_5    top_10    top_20    top_50\n",
-       "5      5  0.462679  0.572952  0.694928  0.775813  0.842393  0.901691\n",
-       "4      4  0.461638  0.572432  0.694668  0.776333  0.843173  0.900650\n",
-       "3      3  0.459558  0.569311  0.692848  0.775553  0.842393  0.899610\n",
-       "2      2  0.452016  0.562289  0.689727  0.769051  0.840052  0.896489\n",
-       "0      0  0.447594  0.562289  0.682965  0.765150  0.831990  0.892588\n",
-       "1      1  0.441873  0.556307  0.684265  0.759688  0.830689  0.892848"
+       "2      2  0.426008  0.535501  0.660598  0.748505  0.817425  0.884265\n",
+       "1      1  0.417945  0.525098  0.654356  0.742003  0.811443  0.880364\n",
+       "0      0  0.411704  0.523537  0.642913  0.732380  0.804681  0.876983"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
