- bug fixed for recall - all

--- a/squad/Model_Execution_for_Tracing_Improvement.ipynb
+++ b/squad/Model_Execution_for_Tracing_Improvement.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,19 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_2_epoch_10_mar_0.6_sf_0.9_0.9_wd_0.001_0.001_lr_0.001_dim_2048_2048_keep_1_1_seed_66_66_loss_v3/debug_dict.pkl',\n",
-       " '4 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
-       " '5 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_10_mar_0.6_sf_0.9_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl',\n",
-       " '6 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_15_mar_0.6_sf_0.9_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl']"
+       "['1 --> /home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +88,13 @@
        "'/home/jackalhan/Development/github/more_meaningful_representations/squad/train/improvement/model_performances/subset_5000/model_2_layers_1_epoch_2_mar_0.6_sf_0.1_wd_0.001_lr_0.001_dim_2048_keep_1_seed_66_loss_v3/debug_dict.pkl'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_indx =4\n",
+    "model_indx =1\n",
     "my_dict = load_from_pickle(os.path.join(base_data_path, \n",
     "                                        debug_files[model_indx]))\n",
     "num_of_epochs = my_dict['epochs']\n",
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +118,7 @@
          "mode": "lines+markers",
          "name": "Top top_1",
          "type": "scatter",
+         "uid": "4fd3fde6-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -136,6 +134,7 @@
          "mode": "lines+markers",
          "name": "Top top_2",
          "type": "scatter",
+         "uid": "4fd3fde7-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -151,6 +150,7 @@
          "mode": "lines+markers",
          "name": "Top top_5",
          "type": "scatter",
+         "uid": "4fd3fde8-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -166,6 +166,7 @@
          "mode": "lines+markers",
          "name": "Top top_10",
          "type": "scatter",
+         "uid": "4fd3fde9-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -181,6 +182,7 @@
          "mode": "lines+markers",
          "name": "Top top_20",
          "type": "scatter",
+         "uid": "4fd3fdea-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -196,6 +198,7 @@
          "mode": "lines+markers",
          "name": "Top top_50",
          "type": "scatter",
+         "uid": "4fd3fdeb-b805-11e8-a9b3-989096cb06e5",
          "x": [
           0,
           1,
@@ -219,10 +222,24 @@
        }
       },
       "text/html": [
-       "<div id=\"14e3c623-5595-430f-b963-eb559d3bce76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14e3c623-5595-430f-b963-eb559d3bce76\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2], \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2], \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2], \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2], \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2], \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2], \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"f104e523-7f23-4ecd-a277-f4c228c39e3a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'f104e523-7f23-4ecd-a277-f4c228c39e3a',\n",
+       "            [{\"mode\": \"lines+markers\", \"name\": \"Top top_1\", \"uid\": \"4fd3fde6-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_2\", \"uid\": \"4fd3fde7-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_5\", \"uid\": \"4fd3fde8-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_10\", \"uid\": \"4fd3fde9-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_20\", \"uid\": \"4fd3fdea-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_50\", \"uid\": \"4fd3fdeb-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('f104e523-7f23-4ecd-a277-f4c228c39e3a',{});}).then(function(){Plotly.animate('f104e523-7f23-4ecd-a277-f4c228c39e3a');})\n",
+       "        });</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"14e3c623-5595-430f-b963-eb559d3bce76\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"14e3c623-5595-430f-b963-eb559d3bce76\", [{\"type\": \"scatter\", \"name\": \"Top top_1\", \"x\": [0, 1, 2], \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_2\", \"x\": [0, 1, 2], \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_5\", \"x\": [0, 1, 2], \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_10\", \"x\": [0, 1, 2], \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_20\", \"x\": [0, 1, 2], \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"mode\": \"lines+markers\"}, {\"type\": \"scatter\", \"name\": \"Top top_50\", \"x\": [0, 1, 2], \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"mode\": \"lines+markers\"}], {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}}, {\"linkText\": \"Export to plot.ly\", \"showLink\": true})});</script>"
+       "<div id=\"f104e523-7f23-4ecd-a277-f4c228c39e3a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'f104e523-7f23-4ecd-a277-f4c228c39e3a',\n",
+       "            [{\"mode\": \"lines+markers\", \"name\": \"Top top_1\", \"uid\": \"4fd3fde6-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.411703511053316, 0.41794538361508454, 0.42600780234070224], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_2\", \"uid\": \"4fd3fde7-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.5235370611183355, 0.5250975292587776, 0.5355006501950585], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_5\", \"uid\": \"4fd3fde8-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.6429128738621587, 0.6543563068920676, 0.6605981794538361], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_10\", \"uid\": \"4fd3fde9-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.7323797139141742, 0.7420026007802341, 0.7485045513654096], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_20\", \"uid\": \"4fd3fdea-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.8046814044213264, 0.811443433029909, 0.8174252275682705], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}, {\"mode\": \"lines+markers\", \"name\": \"Top top_50\", \"uid\": \"4fd3fdeb-b805-11e8-a9b3-989096cb06e5\", \"y\": [0.8769830949284786, 0.8803641092327699, 0.8842652795838751], \"x\": [0.0, 1.0, 2.0], \"type\": \"scatter\"}],\n",
+       "            {\"yaxis\": {\"title\": \"Recall Values\"}, \"title\": \"How the recalls at top n are changing for each epoch\", \"xaxis\": {\"title\": \"Epochs\"}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('f104e523-7f23-4ecd-a277-f4c228c39e3a',{});}).then(function(){Plotly.animate('f104e523-7f23-4ecd-a277-f4c228c39e3a');})\n",
+       "        });</script>"
       ]
      },
      "metadata": {},
@@ -301,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +393,7 @@
        "0      0  0.411704  0.523537  0.642913  0.732380  0.804681  0.876983"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
